--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ __pycache__/
 data/raw/
 logs/
 telegram_session.session
+.env
+
+.user.yml
+telegram_session.session-journal
+
+target/
+
+dbt_packages/
